lintian (2.4.2) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - init.d-script-depends-on-unknown-virtual-facility

  * checks/fields:
    + [RA] Allow Breaks without a version if the broken package is a
      virtual package.
  * checks/huge-usr-share{,.desc}:
    + [RA] Count file size from the tar listing rather than using du.  The
      results of du vary based on file system and other factors and make
      the tag difficult to test.
  * checks/init.d{,.desc}:
    + [RG] Check for init.d scripts depending on unknown virtual
      facilities.
  * checks/menu-format.desc:
    + [RA] Fix typo in long description of duplicated-key-in-desktop-entry.
      Thanks, Niels Thykier.  (Closes: #580700)
  * checks/menus:
    + [RG] Recognise call to update-menus when using 'exec.'

  * collection/objdump-info:
    + [RG] Disable etch compatibility code.
  * collection/strings:
    + [RG] Correctly handle ELF binaries with whitespaces in their name.
      (LP: #540342)

  * data/fields/virtual-packages:
    + [RA] Update to current unstable and add the old xserver-xorg video
      and input virtual packages.
  * data/init.d/data/init.d/virtual_facilities
    + [RG] New list of virtual facilities that exist in the archive.
  * data/spelling/corrections:
    + [RG] Add more spelling corrections.

  * frontend/lintian:
    + [RA] Set a PATH of /bin:/usr/bin if PATH is completely unset.
      Thanks, Carsten Hey.

  * lib/Lintian/Collect/Binary.pm:
    + [RG] Correctly handle ELF binaries with whitespaces in their name.
  * lib/Lintian/Relation.pm:
    + [RA] Rather than allowing only a package name or a substvar, allow
      substvars mixed into the package name.  (Closes: #580494)

  * private/refresh-insserv-data:
    + [RG] New script to collect insserv data from the archive.
  * private/refresh-virtual-packages-data:
    + [RA] Fix handling of # Keep: lines to work correctly now that
      virtual packages mentioned only once are excluded.
