@@ -71,8 +71,8 @@ while (<CONTROL>) {
 			tag "xs-vcs-header-in-debian-control", "$field"
 			    if $known_source_fields{$base};
 		}
-		if ($field eq 'package-type') {
-			tag "package-type-in-debian-control", "line $.";
+		if ($field eq 'xc-package-type') {
+			tag 'xc-package-type-in-debian-control', "line $.";
 		}
 		unless (/^\S+: \S/ || /^\S+:$/) {
 			tag 'debian-control-has-unusual-field-spacing', "line $.";
