@@ -11,7 +11,6 @@ Test-For:
  no-section-field-for-source
  obsolete-relation-form-in-source
  package-depends-on-itself
- package-type-in-debian-control
  stronger-dependency-implies-weaker
 References: Debian Bug#30020, Debian Bug#409099, Debian Bug#516706,
  Debian Bug#533202, Debian Bug#557971, Debian Bug#573399
