@@ -3,12 +3,10 @@ E: control-file-general source: missing-separator-between-items in control-file-
 I: control-file-general source: binary-control-field-duplicates-source field "maintainer" in package control-file-general
 I: control-file-general source: duplicate-long-description control-file-general control-file-general-1 control-file-general-2 control-file-general-3 control-file-general-4
 I: control-file-general source: duplicate-short-description control-file-general control-file-general-1
-I: control-file-general-4: unknown-field-in-control package-type
 W: control-file-general source: no-section-field-for-source
 W: control-file-general source: obsolete-relation-form-in-source in control-file-general-1 conflicts: libsqlite3-0 (< 3.6.12)
 W: control-file-general source: obsolete-relation-form-in-source in source build-depends-indep: perl (> 5.8)
 W: control-file-general source: package-depends-on-itself control-file-general depends
-W: control-file-general source: package-type-in-debian-control line 67
 W: control-file-general source: stronger-dependency-implies-weaker control-file-general depends -> recommends foo
 W: control-file-general source: stronger-dependency-implies-weaker control-file-general depends -> suggests bar | baz
 W: control-file-general source: stronger-dependency-implies-weaker control-file-general recommends -> suggests bar | baz
