@@ -1,0 +1,18 @@
+Source: {$srcpkg}
+Priority: extra
+Section: {$section}
+Maintainer: {$author}
+Standards-Version: {$standards_version}
+Build-Depends: debhelper (>= 7)
+Homepage: http://lintian.debian.org/
+
+Package: {$srcpkg}-udeb
+Section: debian-installer
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+XC-Package-Type: udeb
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
