@@ -1,0 +1,7 @@
+Testname: control-file-pedantic
+Sequence: 6000
+Version: 1.0
+Skeleton: pedantic
+Options: --pedantic -I -E
+Description: Pedantic tests for control file issues
+Test-For: xc-package-type-in-debian-control
